# opencv_face_recognition

./: CMakeLists.txt  README.md  main.cpp
include/: email_send.h  face_detect.h
src/: email_send.cpp  face_detect.cpp
